# nrg-seminar

./: .gitignore  LICENSE  README.md  steps.txt
volume-cloud-sampling/: .gitignore  Cargo.toml
volume-cloud-sampling/src/: export.rs  main.rs  point_cloud.rs  rendering.rs  volume.rs
volume-rendering/: pyproject.toml  volume2sparse.py
